syntax = "proto3";

package hotel.booking.v1;

option go_package = "github.com/semho/hotel-booking/pkg/proto/booking_v1/booking";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "room/room.proto"; // импортируем определения из room.proto

// Статусы бронирования
enum BookingStatus {
  BOOKING_STATUS_UNSPECIFIED = 0;
  BOOKING_STATUS_PENDING = 1;    // Ожидает подтверждения
  BOOKING_STATUS_CONFIRMED = 2;  // Подтверждено
  BOOKING_STATUS_CANCELLED = 3;  // Отменено
  BOOKING_STATUS_COMPLETED = 4;  // Завершено (после выезда)
  BOOKING_STATUS_NO_SHOW = 5;    // Гость не заехал
}

service BookingService {
  rpc GetAvailableRooms(GetAvailableRoomsRequest) returns (GetAvailableRoomsResponse) {
    option (google.api.http) = {
      get: "/api/v1/available-rooms"
    };
  }

  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse) {
    option (google.api.http) = {
      post: "/api/v1/bookings"
    };
  }

  // UpdateBookingStatus updates booking status
  rpc UpdateBookingStatus(UpdateBookingStatusRequest) returns (UpdateBookingStatusResponse) {
    option (google.api.http) = {
      put: "/api/v1/bookings/{booking_id}/status"
    };
  }
}

message GetAvailableRoomsRequest {
  google.protobuf.Timestamp check_in = 1;
  google.protobuf.Timestamp check_out = 2;
  optional int32 capacity = 3;
  optional hotel.room.v1.RoomType type = 4;
}

message GetAvailableRoomsResponse {
  repeated hotel.room.v1.Room rooms = 1;
}

message CreateBookingRequest {
  google.protobuf.Timestamp check_in = 1;
  google.protobuf.Timestamp check_out = 2;
  optional int32 capacity = 3;
  optional hotel.room.v1.RoomType type = 4;
  optional string user_id = 5;
  string guest_name = 6;
  string guest_email = 7;
  string guest_phone = 8;
}

message CreateBookingResponse {
  Booking booking = 1;
}

message UpdateBookingStatusRequest {
  string booking_id = 1;
  BookingStatus status = 2;
  string reason = 3;
  string changed_by = 4;
}

message UpdateBookingStatusResponse {
  Booking booking = 1;
}

// структура Booking
message Booking {
  string id = 1;
  string room_id = 2;
  optional string user_id = 3;
  string guest_name = 4;
  string guest_email = 5;
  string guest_phone = 6;
  google.protobuf.Timestamp check_in = 7;
  google.protobuf.Timestamp check_out = 8;
  double total_price = 9;
  google.protobuf.Timestamp created_at = 10;
  BookingStatus current_status = 11;
}